# MultilinearReconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MultilinearReconstruction.pro  OffscreenMeshVisualizer.cpp  OffscreenMeshVisualizer.h  README.md  basicmesh.cpp  basicmesh.h  blendshape_data.h  common.h  constraints.h  costfunctions.h  costfunctions_exp.h  create_setting_file.py  frag.glsl  index.html  ioutilities.cpp  ioutilities.h  main.cpp  mathutils.hpp  mesh_matcher.cpp  meshvisualizer.cpp  meshvisualizer.h  meshvisualizer2.cpp  meshvisualizer2.h  multiimagereconstruction.cpp  multiimagereconstruction_dense.cpp  multiimagereconstruction_exp.cpp  multiimagereconstructor.h  multilinearmodel.cpp  multilinearmodel.h  multilinearmodelbuilder.cpp  multilinearmodelbuilder.h  multilinearreconstructor.hpp  parameters.h  params.json  reporter.cpp  reporter.h  (+13 more)
aam/: align_shape.m  draw_shape.m  driver.m  read_points.m  read_settings.m  split_channels.m  synthesize.m
aam/matlab/: AAMfilter.m  align_shape.m  batch_driver.m  driver.m  scale_shape.m  single_driver.m  synthesize.m  visualize_set.m
eclipse/: build.sh
tests/: CMakeLists.txt  test_ceres.cpp  test_matlab.m  test_mesh_visualizer.cpp  test_mesh_visualizer2.cpp  test_offscreen_visualizer.cpp  test_pipe.cpp  test_subdivision.cpp  test_tensors.cpp
